RESOLVED FIXED195101
Unable to log into chase.com on iPad when DeviceMotionEvent API is disabled
https://bugs.webkit.org/show_bug.cgi?id=195101
Summary Unable to log into chase.com on iPad when DeviceMotionEvent API is disabled
Chris Dumez
Reported 2019-02-27 09:34:28 PST
Unable to log into chase.com on iPad when DeviceMotionEvent API is disabled.
Attachments
Patch (3.66 KB, patch)
2019-02-27 09:55 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-02-27 09:34:42 PST
Chris Dumez
Comment 2 2019-02-27 09:55:18 PST
Geoffrey Garen
Comment 3 2019-02-27 10:30:15 PST
Comment on attachment 363097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=363097&action=review r=me with one change > Source/WebCore/page/DOMWindow.cpp:1894 > + if (!isSameSecurityOriginAsMainFrame() || !isSecureContext()) > + return; Can you add a test for needsSiteSpecificQuirks here, so that website developers can disable the quirk when testing a fix?
Chris Dumez
Comment 4 2019-02-27 10:31:06 PST
Comment on attachment 363097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=363097&action=review > Source/WebCore/ChangeLog:13 > + Unfortunately, document()->settings().needsSiteSpecificQuirks() is false on iOS so I could not See this line in the change log.
Geoffrey Garen
Comment 5 2019-02-27 10:34:23 PST
Sad face.
WebKit Commit Bot
Comment 6 2019-02-27 11:03:27 PST
Comment on attachment 363097 [details] Patch Clearing flags on attachment: 363097 Committed r242138: <https://trac.webkit.org/changeset/242138>
WebKit Commit Bot
Comment 7 2019-02-27 11:03:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.